--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,8 +1,8 @@
-<div class="grid__item two-fifths lap-four-sixths palm-one-whole">
+<div class="grid__item seven-tenths lap-four-sixths palm-one-whole">
   <a href="{{ root_url }}/" class="site-title">{{ site.title }}</a>
 </div>
 
-<div class="grid__item three-fifths lap-two-sixths palm-one-whole">
+<div class="grid__item three-tenths lap-two-sixths palm-one-whole">
   <nav>
     {% include site/navigation.html %}
   </nav>
